--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -25,6 +25,7 @@ img {
     border-radius: 15px;
 }
 
+/* Button */ 
 .item button {
     background-color: #c4c4c4;
     box-shadow: 0 10px 30px -10px rgb(0 0 0 / 20%);
@@ -46,6 +47,34 @@ img {
     background: #727272;
 }
 
+/* Links */ 
+.item .Option {
+    background-color: #d1d1d1;
+    box-shadow: 0 10px 30px -10px rgb(0 0 0 / 20%);
+    /*height: 32px;*/
+    padding-top: 5px;
+    padding-bottom: 5px;
+    width: 280px;
+
+    border: 1px solid black;
+    border-radius: 5px;
+    font-size: small;
+    font-weight: 400;
+    font-style: italic;
+    border-color: #919191;
+    color: black;
+    text-decoration: none;
+}
+  
+.item .Option:hover {
+    background: #919191;
+}
+  
+.item .Option:active {
+    background: #727272;
+}
+
+/* */
 
 .item h3, h4, h5 {
       padding: 0;
