--- a/src/components/ItemList/ItemList.css
+++ b/src/components/ItemList/ItemList.css
@@ -4,7 +4,7 @@
     justify-content: center;
     
     grid-template-columns: repeat(4, 1fr);
-    grid-gap: 10px;
+    grid-gap: 0;
 
     padding: 1rem 2rem 1rem 2rem;
 }
