--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -1,3 +1,89 @@
+
 .itemDetailContainer {
-    background-color: red;
+    box-shadow: 0 10px 30px -10px rgb(0 0 0 / 45%);
+    margin: auto;
+    margin-bottom: 3rem;
+    padding: 50px;
+    width: 60rem;
+    border-radius: 1rem;
+    display: flex;
+    flex-direction: column;    
+    color: #707070;
+}
+
+.detailHeader {
+    display: flex;
+    justify-content: space-between
+}
+
+.detailImage img {
+    width: 30rem;
+    border-radius: 1rem;
+}
+
+.detailInfo {
+    width: 30rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    padding: 0 2rem 0 3rem;
+    align-items: baseline;
+}
+
+.detailInfo H1 {
+    color: #707070;
+    text-shadow: 1px 1px 2px #707070;
+    margin-top: 1.3rem;
+    margin-bottom: 1rem;
+}
+
+.detailInfo H3 {
+    margin-top: 2rem;
+    margin-bottom: 0.5rem;
+    text-shadow: 1px 1px 2px #70707090;
+}
+
+.detailInfo H4 {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+
+.detailInfo H5 {
+    font-weight: lighter;
+    font-style: italic;
+}
+
+.detailDescription {
+    padding-top: 1rem;
+    text-align: start;
+}
+
+.detailDescription h3 {
+    margin-bottom: 0.5rem;
+}
+
+.detailDescription h4 {
+    font-weight:400;
+}
+
+/* Button */ 
+.detailInfo button {
+    background-color: #c4c4c4;
+    box-shadow: 0 10px 30px -10px rgb(0 0 0 / 20%);
+    height: 32px;
+    width: 27rem;
+
+    border-radius: 5px;
+    font-weight: bold;
+    font-style: italic;
+    border-color: #919191;
+    color: black;
+}
+  
+.detailInfo button:hover {
+    background: #919191;
+}
+  
+.detailInfo button:active {
+    background: #727272;
 }
