--- a/src/components/CartWidget/CartWidget.css
+++ b/src/components/CartWidget/CartWidget.css
@@ -21,6 +21,11 @@
     font-size: medium;
 }
 
+.ActiveOption, .Option {
+    text-decoration: none;
+    font-style: normal;
+}
+
 .CartImg {
     margin-right: 10px;
 }
