--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -94,3 +94,31 @@
     padding-bottom: 0;
     align-self: center;
 }
+
+/* Buttons */
+.secondaryBtnContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 30px;
+}
+
+.secondaryButton {
+    background-color: #929292;
+    padding: 5px;
+    margin: 5px;
+    border-radius: 5px;
+    border: 1px solid rgb(97, 97, 97);
+}
+
+.secondaryButton:hover {
+    background-color: #cacaca;
+    border-style: outset;
+}
+
+a {
+    color: black;
+    text-decoration: none;
+}
+
