--- a/src/components/ItemList/ItemList.css
+++ b/src/components/ItemList/ItemList.css
@@ -2,9 +2,13 @@
 .cardContainer {
     display: grid;
     justify-content: center;
+    justify-items: center;
     
     grid-template-columns: repeat(4, 1fr);
-    grid-gap: 0;
+    grid-gap: 20px;
+
+    height: auto;
+    width: auto;
 
     padding: 1rem 2rem 1rem 2rem;
 }
